bugfix: text float, block button text, scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,10 +31,10 @@ html {
 
 @layer components {
   body::-webkit-scrollbar-thumb {
-    @apply bg-primary rounded-3xl outline-0 dark:bg-white;
+    @apply bg-gray-300 outline-0 dark:bg-gray-600;
   }
   body::-webkit-scrollbar {
-    @apply w-[4px];
+    @apply w-[10px];
   }
   input::placeholder {
     @apply text-gray-600 dark:text-white;
